exports[`prefer-mock-method > invalid(1): import test from 'node:test';\ntest('t', t => {\n\t(getObj(), other).method = t.mock.fn();\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(getObj(), other).method = t.mock.fn();
  4 | });

`;

exports[`prefer-mock-method > invalid(1): import test from 'node:test';\ntest('t', t => {\n\t(getObj(), other).method = t.mock.fn();\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	(getObj(), other).method = t.mock.fn();
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.method()\` over assigning \`t.mock.fn()\` to a property, so the original method is tracked and can be restored.
  4 | });

`;

exports[`prefer-mock-method > invalid(10): import {beforeEach} from 'node:test';\nbeforeEach(function (t) { object.method = t.mock.fn(); }); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(function (t) { object.method = t.mock.fn(); });

`;

exports[`prefer-mock-method > invalid(10): import {beforeEach} from 'node:test';\nbeforeEach(function (t) { object.method = t.mock.fn(); }); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
> 2 | beforeEach(function (t) { object.method = t.mock.fn(); });
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.method()\` over assigning \`t.mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(11): import {beforeEach} from 'node:test';\nbeforeEach(t => { object.method = t.mock.fn(() => 42); }); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(t => { object.method = t.mock.fn(() => 42); });

`;

exports[`prefer-mock-method > invalid(11): import {beforeEach} from 'node:test';\nbeforeEach(t => { object.method = t.mock.fn(() => 42); }); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
> 2 | beforeEach(t => { object.method = t.mock.fn(() => 42); });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.method()\` over assigning \`t.mock.fn()\` to a property, so the original method is tracked and can be restored.

Suggestion 1/1: Replace with \`t.mock.method()\`.:
  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(t => { t.mock.method(object, 'method', () => 42); });

`;

exports[`prefer-mock-method > invalid(12): import {mock} from 'node:test';\nobject.method = mock.fn(); 1`] = `

  1 | import {mock} from 'node:test';
  2 | object.method = mock.fn();

`;

exports[`prefer-mock-method > invalid(12): import {mock} from 'node:test';\nobject.method = mock.fn(); 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | object.method = mock.fn();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(13): import {mock} from 'node:test';\nobject.method = mock.fn(() => 42); 1`] = `

  1 | import {mock} from 'node:test';
  2 | object.method = mock.fn(() => 42);

`;

exports[`prefer-mock-method > invalid(13): import {mock} from 'node:test';\nobject.method = mock.fn(() => 42); 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | object.method = mock.fn(() => 42);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

Suggestion 1/1: Replace with \`mock.method()\`.:
  1 | import {mock} from 'node:test';
  2 | mock.method(object, 'method', () => 42);

`;

exports[`prefer-mock-method > invalid(14): import {mock} from 'node:test';\nobject['method'] = mock.fn(); 1`] = `

  1 | import {mock} from 'node:test';
  2 | object['method'] = mock.fn();

`;

exports[`prefer-mock-method > invalid(14): import {mock} from 'node:test';\nobject['method'] = mock.fn(); 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | object['method'] = mock.fn();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(15): import {mock} from 'node:test';\nobject[\`method\`] = mock.fn(); 1`] = `

  1 | import {mock} from 'node:test';
  2 | object[\`method\`] = mock.fn();

`;

exports[`prefer-mock-method > invalid(15): import {mock} from 'node:test';\nobject[\`method\`] = mock.fn(); 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | object[\`method\`] = mock.fn();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(16): import {mock} from 'node:test';\nconst name = 'method';\nobject[name] = mock.fn(); 1`] = `

  1 | import {mock} from 'node:test';
  2 | const name = 'method';
  3 | object[name] = mock.fn();

`;

exports[`prefer-mock-method > invalid(16): import {mock} from 'node:test';\nconst name = 'method';\nobject[name] = mock.fn(); 2`] = `

Message:
  1 | import {mock} from 'node:test';
  2 | const name = 'method';
> 3 | object[name] = mock.fn();
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(17): import {mock} from 'node:test';\nconst methodName = 'method';\nobject[methodName] = mock.fn(); 1`] = `

  1 | import {mock} from 'node:test';
  2 | const methodName = 'method';
  3 | object[methodName] = mock.fn();

`;

exports[`prefer-mock-method > invalid(17): import {mock} from 'node:test';\nconst methodName = 'method';\nobject[methodName] = mock.fn(); 2`] = `

Message:
  1 | import {mock} from 'node:test';
  2 | const methodName = 'method';
> 3 | object[methodName] = mock.fn();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(18): import {mock} from 'node:test';\nobject.method = mock.fn(); 1`] = `

  1 | import {mock} from 'node:test';
  2 | object.method = mock.fn();

`;

exports[`prefer-mock-method > invalid(18): import {mock} from 'node:test';\nobject.method = mock.fn(); 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | object.method = mock.fn();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(19): import {mock} from 'node:test';\nobject.method = mock.fn(undefined); 1`] = `

  1 | import {mock} from 'node:test';
  2 | object.method = mock.fn(undefined);

`;

exports[`prefer-mock-method > invalid(19): import {mock} from 'node:test';\nobject.method = mock.fn(undefined); 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | object.method = mock.fn(undefined);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(2): import test from 'node:test';\ntest('t', t => {\n\tobject.method = t.mock.fn((a, b));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	object.method = t.mock.fn((a, b));
  4 | });

`;

exports[`prefer-mock-method > invalid(2): import test from 'node:test';\ntest('t', t => {\n\tobject.method = t.mock.fn((a, b));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	object.method = t.mock.fn((a, b));
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.method()\` over assigning \`t.mock.fn()\` to a property, so the original method is tracked and can be restored.
  4 | });

`;

exports[`prefer-mock-method > invalid(20): import {mock} from 'node:test';\nobject.method = mock.fn(undefined as never); 1`] = `

  1 | import {mock} from 'node:test';
  2 | object.method = mock.fn(undefined as never);

`;

exports[`prefer-mock-method > invalid(20): import {mock} from 'node:test';\nobject.method = mock.fn(undefined as never); 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | object.method = mock.fn(undefined as never);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(21): import {mock} from 'node:test';\nobject[methodName] = mock.fn(); 1`] = `

  1 | import {mock} from 'node:test';
  2 | object[methodName] = mock.fn();

`;

exports[`prefer-mock-method > invalid(21): import {mock} from 'node:test';\nobject[methodName] = mock.fn(); 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | object[methodName] = mock.fn();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(22): import {mock} from 'node:test';\nfunction f(methodName) { object[methodName] = mock.fn(); } 1`] = `

  1 | import {mock} from 'node:test';
  2 | function f(methodName) { object[methodName] = mock.fn(); }

`;

exports[`prefer-mock-method > invalid(22): import {mock} from 'node:test';\nfunction f(methodName) { object[methodName] = mock.fn(); } 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | function f(methodName) { object[methodName] = mock.fn(); }
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(23): import {mock} from 'node:test';\nobject[0] = mock.fn(); 1`] = `

  1 | import {mock} from 'node:test';
  2 | object[0] = mock.fn();

`;

exports[`prefer-mock-method > invalid(23): import {mock} from 'node:test';\nobject[0] = mock.fn(); 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | object[0] = mock.fn();
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(24): import {mock} from 'node:test';\nobject[-1] = mock.fn(); 1`] = `

  1 | import {mock} from 'node:test';
  2 | object[-1] = mock.fn();

`;

exports[`prefer-mock-method > invalid(24): import {mock} from 'node:test';\nobject[-1] = mock.fn(); 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | object[-1] = mock.fn();
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(25): import {mock} from 'node:test';\nobject[1.5] = mock.fn(); 1`] = `

  1 | import {mock} from 'node:test';
  2 | object[1.5] = mock.fn();

`;

exports[`prefer-mock-method > invalid(25): import {mock} from 'node:test';\nobject[1.5] = mock.fn(); 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | object[1.5] = mock.fn();
    | ^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(26): import {mock} from 'node:test';\nobject[true] = mock.fn(); 1`] = `

  1 | import {mock} from 'node:test';
  2 | object[true] = mock.fn();

`;

exports[`prefer-mock-method > invalid(26): import {mock} from 'node:test';\nobject[true] = mock.fn(); 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | object[true] = mock.fn();
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(27): import {mock} from 'node:test';\nobject[null] = mock.fn(); 1`] = `

  1 | import {mock} from 'node:test';
  2 | object[null] = mock.fn();

`;

exports[`prefer-mock-method > invalid(27): import {mock} from 'node:test';\nobject[null] = mock.fn(); 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | object[null] = mock.fn();
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(28): import {mock} from 'node:test';\nobject[Symbol.iterator] = mock.fn(); 1`] = `

  1 | import {mock} from 'node:test';
  2 | object[Symbol.iterator] = mock.fn();

`;

exports[`prefer-mock-method > invalid(28): import {mock} from 'node:test';\nobject[Symbol.iterator] = mock.fn(); 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | object[Symbol.iterator] = mock.fn();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(29): import {mock} from 'node:test';\na.b.c.run = mock.fn(); 1`] = `

  1 | import {mock} from 'node:test';
  2 | a.b.c.run = mock.fn();

`;

exports[`prefer-mock-method > invalid(29): import {mock} from 'node:test';\na.b.c.run = mock.fn(); 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | a.b.c.run = mock.fn();
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(3): import {before} from 'node:test';\nbefore(t => { object.method = t.mock.fn(); }); 1`] = `

  1 | import {before} from 'node:test';
  2 | before(t => { object.method = t.mock.fn(); });

`;

exports[`prefer-mock-method > invalid(3): import {before} from 'node:test';\nbefore(t => { object.method = t.mock.fn(); }); 2`] = `

Message:
  1 | import {before} from 'node:test';
> 2 | before(t => { object.method = t.mock.fn(); });
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.method()\` over assigning \`t.mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(30): import test from 'node:test';\ntest('t', t => {\n\tt.mock.fn();\nobject.method = t.mock.fn();\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.mock.fn();
  4 | object.method = t.mock.fn();
  5 | });

`;

exports[`prefer-mock-method > invalid(30): import test from 'node:test';\ntest('t', t => {\n\tt.mock.fn();\nobject.method = t.mock.fn();\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.mock.fn();
> 4 | object.method = t.mock.fn();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.method()\` over assigning \`t.mock.fn()\` to a property, so the original method is tracked and can be restored.
  5 | });

`;

exports[`prefer-mock-method > invalid(31): import test from 'node:test';\ntest('t', t => {\n\tobject.method = t.mock.fn(() => 42);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	object.method = t.mock.fn(() => 42);
  4 | });

`;

exports[`prefer-mock-method > invalid(31): import test from 'node:test';\ntest('t', t => {\n\tobject.method = t.mock.fn(() => 42);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	object.method = t.mock.fn(() => 42);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.method()\` over assigning \`t.mock.fn()\` to a property, so the original method is tracked and can be restored.
  4 | });

Suggestion 1/1: Replace with \`t.mock.method()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.mock.method(object, 'method', () => 42);
  4 | });

`;

exports[`prefer-mock-method > invalid(32): import {test} from 'node:test';\nobject.method = test.mock.fn(); 1`] = `

  1 | import {test} from 'node:test';
  2 | object.method = test.mock.fn();

`;

exports[`prefer-mock-method > invalid(32): import {test} from 'node:test';\nobject.method = test.mock.fn(); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | object.method = test.mock.fn();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`test.mock.method()\` over assigning \`test.mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(33): import {mock as m} from 'node:test';\nobject.method = m.fn(); 1`] = `

  1 | import {mock as m} from 'node:test';
  2 | object.method = m.fn();

`;

exports[`prefer-mock-method > invalid(33): import {mock as m} from 'node:test';\nobject.method = m.fn(); 2`] = `

Message:
  1 | import {mock as m} from 'node:test';
> 2 | object.method = m.fn();
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`m.method()\` over assigning \`m.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(34): import {mock} from 'node:test';\nobject.method = mock.fn(original, () => 42); 1`] = `

  1 | import {mock} from 'node:test';
  2 | object.method = mock.fn(original, () => 42);

`;

exports[`prefer-mock-method > invalid(34): import {mock} from 'node:test';\nobject.method = mock.fn(original, () => 42); 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | object.method = mock.fn(original, () => 42);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(35): import {mock} from 'node:test';\nconst spy = object.method = mock.fn(); 1`] = `

  1 | import {mock} from 'node:test';
  2 | const spy = object.method = mock.fn();

`;

exports[`prefer-mock-method > invalid(35): import {mock} from 'node:test';\nconst spy = object.method = mock.fn(); 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | const spy = object.method = mock.fn();
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(36): import {mock} from 'node:test';\nobject.method = mock.fn() as typeof object.method; 1`] = `

  1 | import {mock} from 'node:test';
  2 | object.method = mock.fn() as typeof object.method;

`;

exports[`prefer-mock-method > invalid(36): import {mock} from 'node:test';\nobject.method = mock.fn() as typeof object.method; 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | object.method = mock.fn() as typeof object.method;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(37): import {mock} from 'node:test';\nobject.method = mock.fn(() => 42) as any; 1`] = `

  1 | import {mock} from 'node:test';
  2 | object.method = mock.fn(() => 42) as any;

`;

exports[`prefer-mock-method > invalid(37): import {mock} from 'node:test';\nobject.method = mock.fn(() => 42) as any; 2`] = `

Message:
  1 | import {mock} from 'node:test';
> 2 | object.method = mock.fn(() => 42) as any;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`mock.method()\` over assigning \`mock.fn()\` to a property, so the original method is tracked and can be restored.

Suggestion 1/1: Replace with \`mock.method()\`.:
  1 | import {mock} from 'node:test';
  2 | mock.method(object, 'method', () => 42);

`;

exports[`prefer-mock-method > invalid(38): import test from 'node:test';\ntest('t', t => {\n\tobject.method = t.mock.fn() as any;\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	object.method = t.mock.fn() as any;
  4 | });

`;

exports[`prefer-mock-method > invalid(38): import test from 'node:test';\ntest('t', t => {\n\tobject.method = t.mock.fn() as any;\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	object.method = t.mock.fn() as any;
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.method()\` over assigning \`t.mock.fn()\` to a property, so the original method is tracked and can be restored.
  4 | });

`;

exports[`prefer-mock-method > invalid(39): import test from 'node:test';\ntest('t', t => {\n\t(a, object).method = t.mock.fn(() => 'stubbed');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(a, object).method = t.mock.fn(() => 'stubbed');
  4 | });

`;

exports[`prefer-mock-method > invalid(39): import test from 'node:test';\ntest('t', t => {\n\t(a, object).method = t.mock.fn(() => 'stubbed');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	(a, object).method = t.mock.fn(() => 'stubbed');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.method()\` over assigning \`t.mock.fn()\` to a property, so the original method is tracked and can be restored.
  4 | });

`;

exports[`prefer-mock-method > invalid(4): import {test, getTestContext} from 'node:test';\ntest('t', () => { object.method = getTestContext().mock.fn(); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('t', () => { object.method = getTestContext().mock.fn(); });

`;

exports[`prefer-mock-method > invalid(4): import {test, getTestContext} from 'node:test';\ntest('t', () => { object.method = getTestContext().mock.fn(); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test('t', () => { object.method = getTestContext().mock.fn(); });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`getTestContext().mock.method()\` over assigning \`getTestContext().mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(40): import test from 'node:test';\ntest('t', t => {\n\tobject.method = t.mock.fn((a, b));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	object.method = t.mock.fn((a, b));
  4 | });

`;

exports[`prefer-mock-method > invalid(40): import test from 'node:test';\ntest('t', t => {\n\tobject.method = t.mock.fn((a, b));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	object.method = t.mock.fn((a, b));
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.method()\` over assigning \`t.mock.fn()\` to a property, so the original method is tracked and can be restored.
  4 | });

`;

exports[`prefer-mock-method > invalid(41): import test from 'node:test';\ntest('t', t => {\n\tobject[(a, b)] = t.mock.fn(() => 'stubbed');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	object[(a, b)] = t.mock.fn(() => 'stubbed');
  4 | });

`;

exports[`prefer-mock-method > invalid(41): import test from 'node:test';\ntest('t', t => {\n\tobject[(a, b)] = t.mock.fn(() => 'stubbed');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	object[(a, b)] = t.mock.fn(() => 'stubbed');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.method()\` over assigning \`t.mock.fn()\` to a property, so the original method is tracked and can be restored.
  4 | });

`;

exports[`prefer-mock-method > invalid(5): import {test, getTestContext} from 'node:test';\ntest('t', () => { object.method = getTestContext().mock.fn(() => 42); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('t', () => { object.method = getTestContext().mock.fn(() => 42); });

`;

exports[`prefer-mock-method > invalid(5): import {test, getTestContext} from 'node:test';\ntest('t', () => { object.method = getTestContext().mock.fn(() => 42); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test('t', () => { object.method = getTestContext().mock.fn(() => 42); });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`getTestContext().mock.method()\` over assigning \`getTestContext().mock.fn()\` to a property, so the original method is tracked and can be restored.

Suggestion 1/1: Replace with \`getTestContext().mock.method()\`.:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('t', () => { getTestContext().mock.method(object, 'method', () => 42); });

`;

exports[`prefer-mock-method > invalid(6): import {beforeEach} from 'node:test';\nbeforeEach(t => { object.method = t.mock.fn(); }); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(t => { object.method = t.mock.fn(); });

`;

exports[`prefer-mock-method > invalid(6): import {beforeEach} from 'node:test';\nbeforeEach(t => { object.method = t.mock.fn(); }); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
> 2 | beforeEach(t => { object.method = t.mock.fn(); });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.method()\` over assigning \`t.mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(7): import {after} from 'node:test';\nafter(t => { object.method = t.mock.fn(); }); 1`] = `

  1 | import {after} from 'node:test';
  2 | after(t => { object.method = t.mock.fn(); });

`;

exports[`prefer-mock-method > invalid(7): import {after} from 'node:test';\nafter(t => { object.method = t.mock.fn(); }); 2`] = `

Message:
  1 | import {after} from 'node:test';
> 2 | after(t => { object.method = t.mock.fn(); });
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.method()\` over assigning \`t.mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(8): import {afterEach} from 'node:test';\nafterEach(t => { object.method = t.mock.fn(); }); 1`] = `

  1 | import {afterEach} from 'node:test';
  2 | afterEach(t => { object.method = t.mock.fn(); });

`;

exports[`prefer-mock-method > invalid(8): import {afterEach} from 'node:test';\nafterEach(t => { object.method = t.mock.fn(); }); 2`] = `

Message:
  1 | import {afterEach} from 'node:test';
> 2 | afterEach(t => { object.method = t.mock.fn(); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.method()\` over assigning \`t.mock.fn()\` to a property, so the original method is tracked and can be restored.

`;

exports[`prefer-mock-method > invalid(9): import test from 'node:test';\ntest.beforeEach(t => { object.method = t.mock.fn(); }); 1`] = `

  1 | import test from 'node:test';
  2 | test.beforeEach(t => { object.method = t.mock.fn(); });

`;

exports[`prefer-mock-method > invalid(9): import test from 'node:test';\ntest.beforeEach(t => { object.method = t.mock.fn(); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test.beforeEach(t => { object.method = t.mock.fn(); });
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.method()\` over assigning \`t.mock.fn()\` to a property, so the original method is tracked and can be restored.

`;
